@@ -1,3 +1,7 @@
+2007-11-03 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c (outBitC): optimized for no result
+
 2007-10-31 Borut Razem <borut.razem AT siol.net>
 
 	* src/SDCCsymt.c: fixed (hopeful properly) bug
